# dns_proxy

./: .gitignore  CMakeLists.txt  README.md
dns_proxy/: CMakeLists.txt  dns_proxy.c  dns_proxy.h  resources.h
dns_proxy/config/: config.c  config.h
dns_proxy/custom_server/: dns_server.c  dns_server.h  udp_server.c  udp_server.h
dns_proxy/query_manage_api/: dns_filter.c  dns_filter.h  query_manage_api.c  query_manage_api.h
dns_proxy/user_data_types/: custom_pair.c  custom_pair.h  custom_string.c  custom_string.h  custom_vector.c  custom_vector.h  reponses.h
